// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amp Consent Banner Container should correctly render cookie banner - LTR layout 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-height: 75vh;
  max-width: 37.4375rem;
  overflow-y: auto;
  padding: 2.75rem 1rem 0.5rem 1rem;
  outline: none;
}

@media (min-width: 25rem) {
  .emotion-4 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-4:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  max-width: 37.4375rem;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  outline: none;
}

.emotion-6 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  margin-top: 1rem;
  margin-bottom: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    margin-top: 2rem;
  }
}

.emotion-6:focus {
  outline: none;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #BEBEBE;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-10 {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 span {
  border-bottom: #AEAEB5 solid 0.0625rem;
}

.emotion-10:hover,
.emotion-10:focus {
  background-color: #F6A21D;
  color: #222222;
}

.emotion-10:hover span,
.emotion-10:focus span {
  border-bottom: transparent solid 0.125rem;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0 auto;
  max-width: 23.875rem;
  padding-right: 0;
  padding-bottom: 1rem;
  padding-left: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    max-width: 100%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    padding-bottom: 1.5rem;
  }
}

.emotion-14 {
  margin-bottom: 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    width: calc(50% - 0.5rem);
  }
}

.emotion-14 button {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  background: #FDFDFD;
  border: none;
  color: #222222;
  cursor: pointer;
  display: block;
  height: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-14 button:focus-visible {
  outline: 0.1875rem solid #000000;
}

.emotion-14 button:hover,
.emotion-14 button:focus {
  background-color: #F6A21D;
  color: #222222;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14 button[on='tap:AMP.setState({ isManagingSettings: true })'] {
  background: none;
  border: 0.0625rem solid #F6A21D;
  border: 0.0625rem solid #F6A21D;
  color: #F6A21D;
}

.emotion-14.hide {
  width: 2.75rem;
  height: 2.75rem;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
}

.emotion-14.hide button {
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
  background: none;
  border: none;
}

.emotion-14.hide button:focus::after,
.emotion-14.hide button:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #FFFFFF;
}

.emotion-14.hide button:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
}

.emotion-14.hide svg {
  color: white;
  fill: currentColor;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-20 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-20 {
    fill: linkText;
  }
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-33 {
  color: #FFFFFF;
  margin-top: 1rem;
  margin-bottom: 0;
}

@media (min-width: 37.5rem) {
  .emotion-33 {
    margin-top: 2rem;
  }
}

.emotion-33:focus {
  outline: none;
}

<div>
  <div
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-amp-bind-hidden="isManagingSettings"
        data-testid="amp-cookie-banner"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <h2
            class="emotion-6 emotion-7"
            id="dataCollectionHeading"
            tabindex="-1"
          >
            Let us know you agree to data collection on AMP
          </h2>
          <p
            class="emotion-8 emotion-9"
          >
            We and our partners use technologies, such as 
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
            >
              <span>
                cookies
              </span>
            </a>
            , and collect browsing data to give you the best online experience and to personalise the content and advertising shown to you. Please let us know if you agree.
          </p>
          <ul
            class="emotion-12 emotion-13"
            role="list"
          >
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="accept"
                on="tap:parentId.accept"
                type="button"
              >
                Accept data collection and continue
              </button>
            </li>
            <li
              class="emotion-14 emotion-15"
            >
              <button
                on="tap:AMP.setState({ isManagingSettings: true }), manageCookiesHeading.focus"
                type="button"
              >
                Manage my settings
              </button>
            </li>
            <li
              class="hide emotion-14 emotion-15"
            >
              <div>
                <button
                  class="focusIndicatorRemove"
                  data-cookie-banner="hide"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-20 emotion-21"
                    focusable="false"
                    height="2.75rem"
                    viewBox="0 0 44 44"
                    width="2.75rem"
                  >
                    <path
                      d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="emotion-22"
                  >
                    Close cookie banner
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-amp-bind-hidden="!isManagingSettings"
        data-testid="amp-cookie-banner-manage-settings"
        hidden=""
      >
        <div
          class="emotion-4 emotion-5"
        >
          <h2
            class="emotion-6 emotion-7"
            id="manageCookiesHeading"
            tabindex="-1"
          >
            Manage consent settings on AMP pages
          </h2>
          <p
            class="emotion-8 emotion-9"
          >
            These settings apply to AMP pages only. You may be asked to set these preferences again when you visit non-AMP BBC pages.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            The lightweight mobile page you have visited has been built using Google AMP technology.
          </p>
          <h3
            class="emotion-33 emotion-34"
          >
            Strictly necessary data collection
          </h3>
          <p
            class="emotion-8 emotion-9"
          >
            To make our web pages work, we store some limited information on your device without your consent.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.co.uk/usingthebbc/strictly-necessary-cookies/"
            >
              <span>
                Read more about the essential information we store on your device to make our web pages work.
              </span>
            </a>
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            We use local storage to store your consent preferences on your device.
          </p>
          <h3
            class="emotion-33 emotion-34"
          >
            Optional data collection
          </h3>
          <p
            class="emotion-8 emotion-9"
          >
            When you consent to data collection on AMP pages you are consenting to allow us to display personalised ads that are relevant to you when you are outside of the UK.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.com/usingthebbc/cookies/how-does-the-bbc-use-cookies-for-advertising/"
            >
              <span>
                Read more about how we personalise ads in the BBC and our advertising partners.
              </span>
            </a>
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            You can choose not to receive personalised ads by clicking “Reject data collection and continue” below. Please note that you will still see advertising, but it will not be personalised to you.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            You can change these settings by clicking “Ad Choices / Do not sell my info” in the footer at any time.
          </p>
          <ul
            class="emotion-12 emotion-13"
            role="list"
          >
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="accept"
                on="tap:parentId.accept"
                type="button"
              >
                Accept data collection and continue
              </button>
            </li>
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="reject"
                on="tap:parentId.reject"
                type="button"
              >
                Reject data collection and continue
              </button>
            </li>
            <li
              class="hide emotion-14 emotion-15"
            >
              <div>
                <button
                  class="focusIndicatorRemove"
                  data-cookie-banner="hide"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-20 emotion-21"
                    focusable="false"
                    height="2.75rem"
                    viewBox="0 0 44 44"
                    width="2.75rem"
                  >
                    <path
                      d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="emotion-22"
                  >
                    Close cookie banner
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render cookie banner - RTL layout 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border: 0.125rem solid transparent;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-height: 75vh;
  max-width: 37.4375rem;
  overflow-y: auto;
  padding: 2.75rem 1rem 0.5rem 1rem;
  outline: none;
}

@media (min-width: 25rem) {
  .emotion-4 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

.emotion-4:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  max-width: 37.4375rem;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
  outline: none;
}

.emotion-6 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #FFFFFF;
  margin-top: 1rem;
  margin-bottom: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    margin-top: 2rem;
  }
}

.emotion-6:focus {
  outline: none;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  color: #BEBEBE;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-10 {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 span {
  border-bottom: #AEAEB5 solid 0.0625rem;
}

.emotion-10:hover,
.emotion-10:focus {
  background-color: #F6A21D;
  color: #222222;
}

.emotion-10:hover span,
.emotion-10:focus span {
  border-bottom: transparent solid 0.125rem;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  margin: 0 auto;
  max-width: 23.875rem;
  padding-right: 0;
  padding-bottom: 1rem;
  padding-left: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    max-width: 100%;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    padding-bottom: 1.5rem;
  }
}

.emotion-14 {
  margin-bottom: 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    width: calc(50% - 0.5rem);
  }
}

.emotion-14 button {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.375rem;
  background: #FDFDFD;
  border: none;
  color: #222222;
  cursor: pointer;
  display: block;
  height: 100%;
  min-height: 2.75rem;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 button {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 button {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-14 button:focus-visible {
  outline: 0.1875rem solid #000000;
}

.emotion-14 button:hover,
.emotion-14 button:focus {
  background-color: #F6A21D;
  color: #222222;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14 button[on='tap:AMP.setState({ isManagingSettings: true })'] {
  background: none;
  border: 0.0625rem solid #F6A21D;
  border: 0.0625rem solid #F6A21D;
  color: #F6A21D;
}

.emotion-14.hide {
  width: 2.75rem;
  height: 2.75rem;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
}

.emotion-14.hide button {
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
  background: none;
  border: none;
}

.emotion-14.hide button:focus::after,
.emotion-14.hide button:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #FFFFFF;
}

.emotion-14.hide button:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
}

.emotion-14.hide svg {
  color: white;
  fill: currentColor;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-20 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-20 {
    fill: linkText;
  }
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-33 {
  color: #FFFFFF;
  margin-top: 1rem;
  margin-bottom: 0;
}

@media (min-width: 37.5rem) {
  .emotion-33 {
    margin-top: 2rem;
  }
}

.emotion-33:focus {
  outline: none;
}

<div>
  <div
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
        data-amp-bind-hidden="isManagingSettings"
        data-testid="amp-cookie-banner"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <h2
            class="emotion-6 emotion-7"
            id="dataCollectionHeading"
            tabindex="-1"
          >
            أعلمونا بموافقتكم على جمع المعلومات من خلال AMP
          </h2>
          <p
            class="emotion-8 emotion-9"
          >
            نستخدم نحن وشركاؤنا تقنيات مثل 
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.com/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/"
            >
              <span>
                ملفات الارتباط
              </span>
            </a>
            ، كما نقوم بجمع معلومات خاصة بالتصفح من أجل توفير أفضل خدمة رقمية ولجعل المحتوى والاعلانات، الموجهة إليك، شخصية. الرجاء إعلامنا إذا كنت موافقا على ذلك.
          </p>
          <ul
            class="emotion-12 emotion-13"
            role="list"
          >
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="accept"
                on="tap:parentId.accept"
                type="button"
              >
                وافق على جمع المعلومات واستمر
              </button>
            </li>
            <li
              class="emotion-14 emotion-15"
            >
              <button
                on="tap:AMP.setState({ isManagingSettings: true }), manageCookiesHeading.focus"
                type="button"
              >
                ادارة خياراتي
              </button>
            </li>
            <li
              class="hide emotion-14 emotion-15"
            >
              <div>
                <button
                  class="focusIndicatorRemove"
                  data-cookie-banner="hide"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-20 emotion-21"
                    focusable="false"
                    height="2.75rem"
                    viewBox="0 0 44 44"
                    width="2.75rem"
                  >
                    <path
                      d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="emotion-22"
                  >
                    Close cookie banner
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="emotion-2 emotion-3"
        data-amp-bind-hidden="!isManagingSettings"
        data-testid="amp-cookie-banner-manage-settings"
        hidden=""
      >
        <div
          class="emotion-4 emotion-5"
        >
          <h2
            class="emotion-6 emotion-7"
            id="manageCookiesHeading"
            tabindex="-1"
          >
            ادارة خيارات الموافقة في صفحات AMP
          </h2>
          <p
            class="emotion-8 emotion-9"
          >
            تسري هذه الاعدادات على صفحات AMP فقط. قد يطلب منكم اعادة تحديد الاعدادات عند زيارتكم صفحات بي بي سي غير الخاضعة لـ AMP.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            الصفحة خفيفة الوزن والمخصصة للأجهزة المحمولة التي زرتموها انتجت باستخدام تقنية غوغل للـ AMP.
          </p>
          <h3
            class="emotion-33 emotion-34"
          >
            جمع المعلومات ضروري جدا ولابد منه
          </h3>
          <p
            class="emotion-8 emotion-9"
          >
            لأجل ضمان عمل صفحاتنا بشكل سلس ومقبول، نقوم بخزن بعض المعلومات المحدودة على أجهزتكم دون الحصول على موافقتكم.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.com/usingthebbc/cookies/strictly-necessary-cookies/"
            >
              <span>
                إقرأوا المزيد عن المعلومات الضرورية والحيوية التي نقوم بخزنها على أجهزتكم من أجل ضمان عمل صفحاتنا بشكل جيد.
              </span>
            </a>
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            نقوم بخزن أفضلياتكم التي صرحتم بها في أجهزتكم.
          </p>
          <h3
            class="emotion-33 emotion-34"
          >
            شروط اختيارية لجمع المعلومات
          </h3>
          <p
            class="emotion-8 emotion-9"
          >
            في حال موافقتكم على جمع معلوماتكم من خلال صفحات AMP، فإنكم توافقون على إظهار إعلانات موجهة بشكل شخصي لها علاقة باهتماماتكم عندما تتصفحون هذه الصفحات خارج بريطانيا.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            <a
              class="focusIndicatorReducedWidth emotion-10 emotion-11"
              href="https://www.bbc.com/usingthebbc/cookies/how-does-the-bbc-use-cookies-for-advertising/"
            >
              <span>
                أقرأوا المزيد عن كيفية تخصيص الاعلانات من قبل بي بي سي وشركائها في مجال الإعلان.
              </span>
            </a>
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            بإمكانكم اختيار تجنب استلام الإعلانات الشخصية عن طريق النقر على خيار "أرفض جمع المعلومات واستمر" أدناه.
يرجى ملاحظة أنكم ستستمرون في مشاهدة الإعلانات، ولكنها لن تكون اعلانات موجهة لكم بشكل مخصص.
          </p>
          <p
            class="emotion-8 emotion-9"
          >
            يمكنكم تغيير هذه الإعدادات في أي وقت عن طريق النقر على "خيارات الإعلانات/ لا تبيعوا معلوماتي" الموجود في أسفل الصفحة.
          </p>
          <ul
            class="emotion-12 emotion-13"
            role="list"
          >
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="accept"
                on="tap:parentId.accept"
                type="button"
              >
                وافق على جمع المعلومات واستمر
              </button>
            </li>
            <li
              class="emotion-14 emotion-15"
            >
              <button
                data-cookie-banner="reject"
                on="tap:parentId.reject"
                type="button"
              >
                رفض جمع المعلومات واستمر
              </button>
            </li>
            <li
              class="hide emotion-14 emotion-15"
            >
              <div>
                <button
                  class="focusIndicatorRemove"
                  data-cookie-banner="hide"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-20 emotion-21"
                    focusable="false"
                    height="2.75rem"
                    viewBox="0 0 44 44"
                    width="2.75rem"
                  >
                    <path
                      d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="emotion-22"
                  >
                    Close cookie banner
                  </span>
                </button>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render privacy banner - LTR layout 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

.emotion-2 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-2 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-2 a:focus,
.emotion-2 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  border-bottom: solid 0.125rem transparent;
}

@media (max-width: 24.9375rem) {
  .emotion-2 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-4 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  color: #FFFFFF;
  font-weight: 700;
  padding-top: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-4:focus {
  outline: none;
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-8 li+li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  .emotion-8 li+li {
    margin-top: 0;
  }
}

.emotion-10 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-10 button {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 button {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 button {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 button:hover,
.emotion-10 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 button:focus-visible {
  outline: 0.1875rem solid #000000;
}

@media (min-width: 25rem) {
  .emotion-10 {
    width: 17.3125rem;
  }
}

.emotion-10.hide {
  width: 2.75rem;
  height: 2.75rem;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
}

.emotion-10.hide button {
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
  background: none;
  border: none;
}

.emotion-10.hide button:focus::after,
.emotion-10.hide button:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #FFFFFF;
}

.emotion-10.hide button:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
}

.emotion-10.hide svg {
  color: white;
  fill: currentColor;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="ltr"
        tabindex="-1"
      >
        We've updated our Privacy and Cookies Policy
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="ltr"
      >
        We've made some important changes to our Privacy and Cookies Policy and we want you to know what this means for you and your data.
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="ltr"
        role="list"
      >
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <button
            data-terms-banner="accept"
            on="tap:cookieId.show, privacyId.hide"
            type="button"
          >
            OK
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="ltr"
        >
          <span>
            <a
              data-terms-banner="reject"
              href="https://www.bbc.co.uk/usingthebbc/privacy-policy/"
              on="tap:cookieId.show, privacyId.hide"
            >
              Find out what's changed
            </a>
          </span>
        </li>
        <li
          class="hide emotion-10 emotion-11"
          dir="ltr"
        >
          <div>
            <button
              class="focusIndicatorRemove"
              data-terms-banner="hide"
              on="tap:brandLink.focus, privacy.hide"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-18"
              >
                Close privacy banner
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Amp Consent Banner Container should correctly render privacy banner - RTL layout 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #323232;
  border-top: solid 0.0625rem transparent;
}

.emotion-2 {
  max-width: 37.4375rem;
  margin: 0 auto;
}

.emotion-2 a {
  color: #F6A21D;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: solid 0.0625rem #AEAEB5;
}

.emotion-2 a:focus,
.emotion-2 a:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-2 a:hover,
.emotion-2 a:focus {
  border-bottom: solid 0.125rem transparent;
}

@media (max-width: 24.9375rem) {
  .emotion-2 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    padding: 2.75rem 1rem 0.5rem 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: calc(2rem - 0.0625rem) 1rem 2rem 1rem;
  }
}

.emotion-4 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #FFFFFF;
  font-weight: 700;
  padding-top: 1rem;
  margin: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

.emotion-4:focus {
  outline: none;
}

.emotion-6 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  color: #BEBEBE;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    margin-top: 1.5rem;
  }
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #F6A21D;
  font-weight: 600;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-8 li+li {
  margin-top: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }

  .emotion-8 li+li {
    margin-top: 0;
  }
}

.emotion-10 {
  text-align: center;
  width: 100%;
  word-break: break-word;
}

.emotion-10 button {
  font-size: 0.9375rem;
  line-height: 1.375rem;
  width: 100%;
  min-height: 2.75rem;
  color: #222222;
  font-weight: bold;
  background-color: #FDFDFD;
  border: solid 0.0625rem transparent;
  margin: 0;
  cursor: pointer;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 button {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 button {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

.emotion-10 button:focus,
.emotion-10 button:hover {
  color: #222222;
  background-color: #F6A21D;
}

.emotion-10 button:hover,
.emotion-10 button:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10 button:focus-visible {
  outline: 0.1875rem solid #000000;
}

@media (min-width: 25rem) {
  .emotion-10 {
    width: 17.3125rem;
  }
}

.emotion-10.hide {
  width: 2.75rem;
  height: 2.75rem;
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  padding: 0;
}

.emotion-10.hide button {
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
  background: none;
  border: none;
}

.emotion-10.hide button:focus::after,
.emotion-10.hide button:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #FFFFFF;
}

.emotion-10.hide button:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  border: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF inset;
}

.emotion-10.hide svg {
  color: white;
  fill: currentColor;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-16 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-16 {
    fill: linkText;
  }
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="rtl"
    hidden=""
    id="promptId"
  >
    <div
      class="emotion-2 emotion-3"
      dir="rtl"
    >
      <h2
        class="emotion-4 emotion-5"
        dir="rtl"
        tabindex="-1"
      >
        لقد حدّثنا سياستنا المتعلقة بالخصوصية وبالشروط الخاصة بملفات الارتباط Cookies
      </h2>
      <p
        class="emotion-6 emotion-7"
        dir="rtl"
      >
        لقد أدخلنا تغييرات مهمة على سياستنا المتعلقة بالخصوصية وعلى الشروط الخاصة بملفات الارتباط Cookies، ويهمنا أن تكونوا ملمين بما قد تعني هذه التغييرات بالنسبة لكم ولبياناتكم
      </p>
      <ul
        class="emotion-8 emotion-9"
        dir="rtl"
        role="list"
      >
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <button
            data-terms-banner="accept"
            on="tap:cookieId.show, privacyId.hide"
            type="button"
          >
            موافق
          </button>
        </li>
        <li
          class="emotion-10 emotion-11"
          dir="rtl"
        >
          <span>
            <a
              data-terms-banner="reject"
              href="https://www.bbc.com/usingthebbc/privacy-policy/"
              on="tap:cookieId.show, privacyId.hide"
            >
              إطلع على التغييرات
            </a>
          </span>
        </li>
        <li
          class="hide emotion-10 emotion-11"
          dir="rtl"
        >
          <div>
            <button
              class="focusIndicatorRemove"
              data-terms-banner="hide"
              on="tap:brandLink.focus, cookie.hide"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-16 emotion-17"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-18"
              >
                Close privacy banner
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
